syntax = "proto3";

option go_package = "./pb";

service Calc {
  rpc ExecCalc (CalcRequest) returns (CalcResponse) {}
}

message CalcRequest {
  int64 a = 1;
  int64 b = 2;
  string simbolo_matematico = 3;
}

message CalcResponse {
  int64 result = 1;
}